test/libsolidity/syntaxTests/dataLocations/privateFunction/private_function_return_parameters_no_data_location.sol
contract C {
    function f() private pure returns(uint[]) {}
}
// ----
// TypeError: (51-57): Location must be specified as either "memory" or "storage" for parameters.
